idsvr/yaml/deployment-runtime.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-idsvr-runtime
  labels:
    app.kubernetes.io/name: idsvr
    helm.sh/chart: idsvr-0.9.19
    app.kubernetes.io/instance: dev
    app.kubernetes.io/managed-by: Helm
    role: dev-idsvr-runtime
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: idsvr
      app.kubernetes.io/instance: dev
  template:
    metadata:
      labels:
        app.kubernetes.io/name: idsvr
        helm.sh/chart: idsvr-0.9.19
        app.kubernetes.io/instance: dev
        app.kubernetes.io/managed-by: Helm
        role: dev-idsvr-runtime
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "4466"
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: idsvr-runtime
          image: "custom_idsvr:6.1.0"
          imagePullPolicy: Never
          command: ["/opt/idsvr/bin/idsvr"]
          args: ["-s", "default","--no-admin"]
          ports:
            - name: http-port
              containerPort: 8443
              protocol: TCP
            - name: health-check
              containerPort: 4465
              protocol: TCP
            - name: metrics
              containerPort: 4466
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: health-check
            timeoutSeconds:  1
            failureThreshold: 3
            periodSeconds: 10
            initialDelaySeconds: 600
          readinessProbe:
            httpGet:
              path: /
              port: health-check
            timeoutSeconds:  1
            failureThreshold: 3
            successThreshold: 3
            periodSeconds: 10
            initialDelaySeconds: 600
          volumeMounts:
            - mountPath: /opt/idsvr/etc/init/cluster.xml
              subPath: cluster.xml
              name: cluster-xml
              readOnly: true
            - mountPath: /opt/idsvr/etc/init/configmap-config.xml
              subPath: idsvr-config-backup.xml
              name: configmap-config
              readOnly: true
          resources:
            {}
      volumes:
        - name: cluster-xml
          secret:
            secretName: dev-idsvr-cluster-config-xml
            items:
              - key: cluster-1.xml
                path: cluster.xml
        - name: configmap-config
          configMap:
            name: idsvr-configmap
