idsvr/yaml/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-idsvr-admin-svc
  labels:
    app.kubernetes.io/name: idsvr
    helm.sh/chart: idsvr-0.9.19
    app.kubernetes.io/instance: dev
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 6789
      targetPort: config-port
      protocol: TCP
      name: config-port
    - port: 4465
      targetPort: health-check
      protocol: TCP
      name: health-check
    - port:  4466
      targetPort: metrics
      protocol: TCP
      name: metrics
    - port: 6749
      targetPort: admin-ui
      protocol: TCP
      name: admin-ui
  selector:
    app.kubernetes.io/name: idsvr
    app.kubernetes.io/instance: dev
